# smartfiles

./: .gitignore  README.md  smartfiles_folders.json
backend/: BACKEND_OVERVIEW.md  BENCHMARKING.md  EMBEDDING_MODELS.md  pyproject.toml  pytest.ini
backend/evaluator/: README.md  pyproject.toml
backend/evaluator/src/retrieval_evaluator/: __init__.py  cli_beir.py  cli_smartfiles_beir.py  dashboard_beir.py
backend/evaluator/src/retrieval_evaluator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/evaluator/src/retrieval_evaluator/backends/: base.py  smartfiles_backend.py
backend/evaluator/src/retrieval_evaluator/core/: beir_evaluator.py  models.py
backend/evaluator/src/retrieval_evaluator/datasets/: beir.py
backend/evaluator/src/retrieval_evaluator/logging/: jsonl_logger.py
backend/scripts/: benchmark_dashboard.py  build_dimdrop_mask.py  build_dimdrop_mask_mixed.py  build_dimdrop_mask_sampled.py  embedding_dashboard.py  index_beir_multi.py  run_beir_matrix.py
backend/smartfiles/: config.py  folder_registry.py
backend/smartfiles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/smartfiles/benchmarks/: beir_runner.py  dimdrop_mask.py
backend/smartfiles/cli/: main.py
backend/smartfiles/database/: text_store.py  vector_store.py
backend/smartfiles/embeddings/: embedding_model.py
backend/smartfiles/ingestion/: chunker.py  file_scanner.py  indexer.py  text_extractor.py
backend/smartfiles/search/: dimdrop.py  reranker.py  search_engine.py
backend/smartfiles/server/: api.py
backend/tests/integration/: test_pipeline.py  test_server_api.py
backend/tests/unit/: test_embedding_dashboard_tooltips.py  test_file_scanner.py  test_text_extractor.py
docs/: architecture.md  backend_commands.md  backend_testing.md  context_for_ai.md  frontend_commands.md  fullstack_workflow.md  indexing_pipeline.md  roadmap.md  search_system.md
frontend/: package-lock.json  package.json
(+11 files in other folders)
