[project]
name = "smartfiles"
version = "0.1.0"
description = "AI-powered semantic search for document folders"
dependencies = [
    "typer",
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "chromadb",
    "pypdf",
    "pillow",
    "pytesseract",
    "pdf2image",
    "numpy<2"
]

[project.scripts]
smartfiles = "smartfiles.cli.main:app"