[project]
name = "smartfiles"
version = "0.1.0"
description = "AI-powered semantic search for document folders"
dependencies = [
    "typer",
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "chromadb",
    "pypdf",
    "pillow",
    "pytesseract",
    "pdf2image",
    "numpy<2",
    "python-docx",
    "pytest",
    "pytest-cov"
]

[project.scripts]
smartfiles = "smartfiles.cli.main:app"

[project.optional-dependencies]
benchmark = [
    "beir>=1.0.0",
    "pandas",
    "streamlit",
]