[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval-evaluator"
version = "0.1.0"
description = "Generic retrieval evaluation harness (BEIR-compatible)"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "SmartFiles", email = "dev@example.com"}]
readme = "README.md"
dependencies = [
    "beir>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
logging = ["pandas>=1.5"]

[project.urls]
Homepage = "https://github.com/DrQuacks/smartfiles"

[tool.setuptools.packages.find]
where = ["src"]
